All product routes now protected and also update unit testing for product api
