# config/swagger.json
@@ -9,9 +9,13 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "host": "localhost:3000",
+  "host": "localhost:5000",
   "basePath": "/api/v1",
   "tags": [
+    {
+      "name": "Authentication",
+      "description": "API login and register user, here you can get the access token needed to access other api"
+    },
     {
       "name": "Products",
       "description": "API for products in the system"
@@ -20,12 +24,68 @@
   "schema": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
   "paths": {
+    "/users/login": {
+      "post": {
+        "tags": ["Authentication"],
+        "description": "Login to get access token",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "credentials",
+            "in": "body",
+            "description": "email and password",
+            "schema": {
+              "$ref": "#/definitions/Login"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/users/register": {
+      "post": {
+        "tags": ["Authentication"],
+        "description": "Register user and get access token",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "credentials",
+            "in": "body",
+            "description": "email, name, and password",
+            "schema": {
+              "$ref": "#/definitions/Register"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/products": {
       "get": {
         "tags": ["Products"],
         "description": "Get All products",
         "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -38,6 +98,11 @@
       "post": {
         "tags": ["Products"],
         "description": "Create a product",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "product",
@@ -59,6 +124,11 @@
       }
     },
     "/products/{code}": {
+      "security": [
+        {
+          "Bearer": []
+        }
+      ],
       "parameters": [
         {
           "name": "code",
@@ -71,11 +141,17 @@
       "get": {
         "tags": ["Products"],
         "summary": "Get product with given code",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Product found",
             "schema": {
-              "$ref": "#/definitions/Product"
+              "type": "object",
+              "properties": {}
             }
           }
         }
@@ -83,6 +159,11 @@
       "put": {
         "tags": ["Products"],
         "summary": "Update product with given code",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "product",
@@ -105,6 +186,11 @@
       "delete": {
         "tags": ["Products"],
         "summary": "Delete product with given code",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Product deleted",
@@ -117,21 +203,61 @@
     }
   },
   "definitions": {
-    "Product": {
-      "required": ["code", "id"],
+    "Login": {
+      "required": ["email", "password"],
       "properties": {
-        "code": {
-          "type": "string",
-          "uniqueItems": true
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "Register": {
+      "required": ["email", "name", "password"],
+      "properties": {
+        "email": {
+          "type": "string"
         },
         "name": {
           "type": "string"
         },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "Product": {
+      "required": ["code", "name", "price", "stock"],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "example": 1
+        },
+        "code": {
+          "type": "string",
+          "example": "BR001"
+        },
+        "name": {
+          "type": "string",
+          "example": "Headset Razer"
+        },
         "price": {
-          "type": "number"
+          "type": "integer",
+          "example": 45000
         },
         "stock": {
-          "type": "number"
+          "type": "integer",
+          "example": 45
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2020-02-01T02:55:15.000Z"
+        },
+        "updatedAt": {
+          "type": "string",
+          "example": "2020-02-01T02:55:15.000Z"
         }
       }
     },
